<resources>
    <string name="app_name">G Man</string>
    <string name="please_wait">Please wait!</string>
    <string name="no_internet">No internet!</string>
    <string name="items">Videos</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="really_exit">Really exit?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Ok</string>
    <string name="application_made_by">Application made by G Man</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirm">Sure you want to delete?</string>
    <string name="published_date">Published Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="videoLink">Video Link</string>
    <string name="sound_board">Sound Board</string>
    <string name="scream_one">Frightened</string>
    <string name="scream_two">Chill</string>
    <string name="scream_three">Pretty</string>
    <string name="scream_four">Tasty</string>
    <string name="scream_five">"?!"</string>
    <string name="scream_six">Joyful</string>
    <string name="no">No</string>
    <string name="nah">Nah</string>
</resources>