<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoundBoardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSoundBoardHeight"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/scream_one" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSoundBoardHeight"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/scream_two" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSoundBoardHeight"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/scream_three" />

            <Button
                android:id="@+id/btnFour"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSoundBoardHeight"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/scream_four" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSoundBoardHeight"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/scream_five" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnSoundBoardHeight"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/scream_six" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>