<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddingItems">

        <ImageView
            android:id="@+id/ivItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivHeight"
            tools:src="@drawable/limun_u_oci" />

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/published_date"/>

            <ImageView
                android:id="@+id/ivFavourite"
                android:layout_width="0dp"
                android:layout_height="@dimen/ivFavouriteHeight"
                android:layout_weight="1"
                android:src="@drawable/dislike"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="yyyy-MM-dd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/title"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/videoLink"/>

        <Button
            android:id="@+id/btnVideoLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            tools:text="Video Link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random"/>

    </LinearLayout>

</ScrollView>